[build-system]
requires = ["setuptools >= 80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behaverify"
version = "1.0.0"
authors = [
  { name="Serena Serafina Serbinowska", email="serena.serbinowska.work@proton.me" }
]
description = "A tool for formal verification of behavior trees"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
license = "MIT"
keywords = ["behavior-trees", "formal-verification", "model-checking", "nuXmv"]

dependencies = [
  "py-trees>=2.2.3",
  "textX>=4.1.0",
  "onnx>=1.18.0",
  "onnxruntime>=1.22.1",
  "graphviz>=0.20.3",
  "pillow>=11.1.0",
  "pandas>=2.2.3",
  "Jinja2>=3.1.5",
  "matplotlib>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/verivital/behaverify"
Repository = "https://github.com/verivital/behaverify"
Documentation = "https://github.com/verivital/behaverify"
"Bug Tracker" = "https://github.com/verivital/behaverify/issues"

[project.scripts]
behaverify = "behaverify.behaverify:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "src/grid_world_draw"]

[tool.setuptools.package-data]
"behaverify" = ["data/haskell_files/*.hs", "data/metamodel/*.tx", "data/tick_overwrite/*.py", "data/tikz_files/*.tex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]