cabal-version:      2.4
name:               haskell-frozen-lake-one-hole
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Serene Grace
maintainer:         bserbinowski@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-frozen-lake-one-hole
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        BTreeChangeStrategy
        BTreeDownBad
        BTreeDownUnknown
        BTreeFellInHole
        BTreeGetInfo
        BTreeLeftBad
        BTreeLeftUnknown
        BTreeNeedDown
        BTreeNeedLeft
        BTreeNeedNewSubgoal
        BTreeNeedRight
        BTreeNeedUp
        BTreeReachedGoal
        BTreeRequestDown
        BTreeRequestHold
        BTreeRequestLeft
        BTreeRequestReset
        BTreeRequestRight
        BTreeRequestUp
        BTreeRightBad
        BTreeRightUnknown
        BTreeSetNewSubgoal
        BTreeSometimesChangeStrategy
        BTreeSubgoalUnreachable
        BTreeUpBad
        BTreeUpUnknown
        BTreeXStrategy
        BTreeYStrategy
        BehaviorTreeBlackboard
        BehaviorTreeCore
        BehaviorTreeEnvironment
        HaskellFrozenLake
        SereneOperations
        SereneRandomizer



    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, random
    hs-source-dirs:   app
    default-language: Haskell2010
