cabal-version:      2.4
name:               complex-robot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             serene
maintainer:         bserbinowski@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable complex-robot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Behavior_tree_blackboard
        Behavior_tree_core
        Behavior_tree_environment
        Can_move_forward_file
        Can_move_side_file
        Change_side_file
        Complex_robot
        Flag_found_file
        Flag_not_returned_file
        Go_forward_file
        Go_side_file
        In_home_file
        In_maze_file
        In_target_file
        Need_side_file
        Never_need_side_file
        Search_tile_file
        SereneRandomizer
        Set_zone_file
        Success_node_file


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, random
    hs-source-dirs:   app
    default-language: Haskell2010
